[package]
name = "furikrs"
version = "0.1.0"
authors = ["meganehouser <sleepy.st818@gmail.com>"]
edition = "2018"

[dependencies]
github-rs = { git = "https://github.com/github-rs/github-rs" }
serde_json = "1.0"
clap = "~2.33"
chrono = "0.4.6"
pit = "0.1.0"
failure = "0.1.5"
log = "0.4.0"
env_logger = "0.6.1"
